changing index.html

--- a/MiniApp/index.html
+++ b/MiniApp/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- HTML Meta Tags -->
+  <title>Kotakode Clone | Made by Sagameda</title>
+  <meta name="description" content="Kotakode | Clone By Sagameda as a practice to learn ReactJS">
+  <link rel="canonical" href="https://www.sagameda.com" />
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://sagameda.com">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Kotakode Clone | Made by Sagameda">
+  <meta property="og:description" content="Kotakode | Clone By Sagameda as a practice to learn ReactJS">
+  <meta property="og:image" content="https://sagameda.com/thumbnail.png">
+  <meta property="og:authors" content="Rakha | Sagameda">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="sagameda.com">
+  <meta property="twitter:url" content="https://sagameda.com">
+  <meta name="twitter:title" content="Kotakode Clone | Made by Sagameda">
+  <meta name="twitter:description" content="Kotakode | Clone By Sagameda as a practice to learn ReactJS">
+  <meta name="twitter:image" content="https://sagameda.com/thumbnail.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+
+  <title>Kotakode.com | Cloned By Sagameda</title>
+  <link rel="shortcut icon" href="/src/assets/img/logotab.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
