--- a/MiniApp/index.html
+++ b/MiniApp/index.html
@@ -37,6 +37,7 @@
 
 <body>
   <div id="root"></div>
+  <div id="portal-root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
