--- a/MiniApp/index.html
+++ b/MiniApp/index.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Kotakode Clone | Made by Sagameda">
   <meta property="og:description" content="Kotakode | Clone By Sagameda as a practice to learn ReactJS">
   <meta property="og:image" content="https://sagameda.com/thumbnail.png">
-  <meta property="og:authors" content="Rakha | Sagameda">
+  <meta property="og:authors" content="Sagameda | Sagameda">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
